--- a/styles/style_class.css
+++ b/styles/style_class.css
@@ -1,40 +1,41 @@
 .tab {
-    display: flex;
-    margin-left: 440px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: 440px;
 }
 
 .tab div {
-    background-color: aqua;
-    width: 300px;
-    padding: 10px 20px;
-    text-align: center;
+  background-color: aqua;
+  width: 300px;
+  padding: 10px 20px;
+  text-align: center;
 }
 
 .tab .FirstChild {
-    border-right: 1px solid black;
+  border-right: 1px solid black;
 }
 
 .tab div a {
-    font-size: 50px;
-    font-family: Arial, Helvetica, sans-serif;
-    color: white;
-    text-decoration: none;
+  font-size: 50px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: white;
+  text-decoration: none;
 }
 
 .tab div a:hover {
-    color: rebeccapurple;
+  color: rebeccapurple;
 }
 
-
-
 .NoneBorder {
-    border: none;
+  border: none;
 }
 
 .ColumnStudentName {
-    width: 37%;
+  width: 37%;
 }
 
 .Interactive {
-    text-align: center;
+  text-align: center;
 }
+/*# sourceMappingURL=style_class.css.map */
